git add public file

--- a/views/index.html
+++ b/views/index.html
@@ -4,16 +4,16 @@
 <head>
 	<!--  Meta  -->
 	<meta charset="UTF-8" />
-	<title>Build BBS</title>
+	<title>Node app</title>
 	<!--  Styles  -->
-	<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
 	 crossorigin="anonymous">
-	<link rel="stylesheet" href="styles/index.css"> -->
+	<link rel="stylesheet" href="/css/index.css">
 </head>
 
 <body>
-    <h1>my node app</h1>
+    <div class="container">my node app</div>
 </body>
-
+<script src="/js/index.js" defer></script>
 </html>
